--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
     }
     if (hasTouchScreen)
-        location.href="./login-mobile.html";
+        location.href="./index.html";
 
 </script>
 <script src="./Login_files/loginportal.js.download"></script>
