--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             );
         }
     }
-    if (hasTouchScreen)
-        location.href="./index.html";
+    // if (hasTouchScreen)
+        // location.href="./index.html";
 
 </script>
 <script src="./Login_files/loginportal.js.download"></script>
