--- a/login-mobile.html
+++ b/login-mobile.html
@@ -84,7 +84,7 @@ your
 
 
       <a style=3D"text-align: center; color: white; font-weight: bold; text=
--decoration: none; display: block;">Yale University</a>
+-decoration: none; display: block;">Ng University</a>
 
 
 
