--- a/login-mobile.html
+++ b/login-mobile.html
@@ -37,8 +37,7 @@ el=3D"stylesheet" type=3D"text/css">
   FAVICON
   #####################################################
 -->
- <link rel=3D"shortcut icon" href=3D"https://apps-admissions-yale-edu.cdn.t=
-echnolutions.net/favicon.ico">
+ <link rel=3D"shortcut icon" href=3D"assets/favicon.png">
 
 
 
