--- a/login-mobile.html
+++ b/login-mobile.html
@@ -20,7 +20,7 @@
   FAVICON
   #####################################################
 -->
- <link rel="shortcut icon" href="https://apps-admissions-yale-edu.cdn.technolutions.net/favicon.ico">
+ <link rel="shortcut icon" href="assets/favicon.png">
 
 
 
