--- a/login-mobile.html
+++ b/login-mobile.html
@@ -45,7 +45,7 @@
 
 
 
-      <A style="text-align: center; color: white; font-weight: bold; text-decoration: none; display: block;" href="javascript:void(0);">Yale University</A>
+      <A style="text-align: center; color: white; font-weight: bold; text-decoration: none; display: block;" href="javascript:void(0);">Ng University</A>
 
 
 
